beginnign to apply CSS grid to an alternatre homepage

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,7 +23,7 @@
   /* TYPOGRAPHY & GENERAL  */
 
   button{
-    background-color:#d3aa6c;
+    background-color:#D3AA6C;
     border:none;
     color:#ffffff;
     font-weight: medium;
