--- a/styles/maingridversion.css
+++ b/styles/maingridversion.css
@@ -287,6 +287,7 @@
   grid-column: 1/span 4;
   grid-row: 2;
   margin-bottom: 100px;
+
 }
 
 
@@ -314,11 +315,11 @@
 
 @media screen and (min-width: 991px){
 
-/* not sure if i want to make hero more narrow on desktop */
-  /* .hero{
-    grid-column: 2/span 2;
-    grid-row: 2;
-  } */
+  .hero{
+    margin-left: 20%;
+    margin-right: 20%
+  }
+
 
   .hero h1 {
     font-size: 50px;
@@ -369,6 +370,7 @@
   height: 323px;
 
 }
+
 
 
 
@@ -1299,24 +1301,85 @@
     margin-top: 20px;
     grid-column: 1/span 4;
     grid-row-start: 14;
+    justify-self:center;
   }
 
   @media screen and (min-width: 991px){
       .sitemap-pic{
       margin-left: 20%;
       margin-right: 20%;
+      width: 60%
     }
   }
 
 
-  .sketches{
+  .sketches-intro{
     margin-top: 20px;
     grid-column: 1/span 4;
     grid-row-start: 15;
   }
 
   @media screen and (min-width: 991px){
-      .sketches{
+      .sketches-intro{
+      margin-left: 20%;
+      margin-right: 20%;
+    }
+  }
+
+  .early-image{
+    margin-top: 20px;
+    grid-column: 1/span 4;
+    grid-row-start: 16;
+    width:300px;
+    justify-self:center;
+  }
+
+  @media screen and (min-width: 991px){
+      .early-image{
+      margin-left: 20%;
+      margin-right: 20%;
+
+    }
+  }
+
+.wireframes{
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+}
+
+
+  .wireframes{
+    margin-top: 20px;
+    grid-column: 1/span 4;
+    grid-row-start: 17;
+
+  }
+
+  @media screen and (min-width: 991px){
+    .wireframes{
+
+
+    }
+  }
+
+
+
+  /* @media screen and (min-width: 991px){
+      .wireframes img{
+        width:10%;
+    }
+  } */
+
+  .all-wireframes{
+    margin-top: 20px;
+    grid-column: 1/span 4;
+    grid-row-start: 18;
+    justify-self:center;
+  }
+
+  @media screen and (min-width: 991px){
+      .all-wireframes{
       margin-left: 20%;
       margin-right: 20%;
     }
@@ -1326,7 +1389,7 @@
   .user-testing{
     margin-top: 20px;
     grid-column: 1/span 4;
-    grid-row-start: 16;
+    grid-row-start: 19;
   }
 
   @media screen and (min-width: 991px){
@@ -1334,42 +1397,6 @@
       margin-left: 20%;
       margin-right: 20%;
     }
-  }
-
-  .early-image{
-    /* width: 260.28px; */
-   /* height: 247.83px; */
-   display: block;
-  }
-
-  .wireframe1{
-    /* width: 100.49px;
-    height: 217.59px; */
-  }
-
-  .wireframe2{
-    /* width: 100.49px;
-    height: 217.59px; */
-  }
-
-  .wireframe3{
-    /* width: 100.49px;
-    height: 217.59px; */
-  }
-
-  .wireframe4{
-    /* width: 100.49px;
-    height: 217.59px; */
-  }
-
-  .wireframe5{
-    /* width: 100.49px;
-    height: 217.59px; */
-  }
-
-  .wireframe6{
-    /* width: 100.49px;
-    height: 217.59px; */
   }
 
   .user-testing{
@@ -1384,7 +1411,7 @@
     margin-top:100px;
     margin-bottom:100px;
     grid-column: 1/span 4;
-    grid-row-start: 17;
+    grid-row-start: 20;
   }
 
   @media screen and (min-width: 991px){
@@ -1397,13 +1424,13 @@
 
 
   .branding-idea{
-    /* width: 155.8px;
-    height: 155.13px; */
+    width: 155.8px;
+    height: 155.13px;
     display:inline-block;
   }
 
   .moodboard{
-    width:375px;
+    width:325px;
   }
 
     @media screen and (min-width: 991px){
@@ -1437,9 +1464,7 @@
   }
 
   .final-logo{
-    /* width: 323.41px;
-    height: 154.16px; */
-    /* left: 26px; */
+    width:30%
   }
 
 
@@ -1451,7 +1476,8 @@
     margin-top:100px;
     margin-bottom:100px;
     grid-column: 1/span 4;
-    grid-row-start: 18;
+    grid-row-start: 21;
+
   }
 
   @media screen and (min-width: 991px){
@@ -1462,10 +1488,7 @@
   }
 
   .type-study{
-
-     /* width: 375px; */
-    /*height: 1130.01px; */
-    /* left: 0px; */
+    width:60%;
   }
 
   .branding-indented3{
@@ -1476,7 +1499,7 @@
     margin-top:50px;
     margin-bottom:100px;
     grid-column: 1/span 4;
-    grid-row-start: 19;
+    grid-row-start: 22;
   }
 
   @media screen and (min-width: 991px){
@@ -1486,13 +1509,9 @@
     }
   }
 
+
   .final-colors{
-
-
-    /* width: 153px;
-    height: 106px; */
-    /* left: 25px; */
-    display: inline-block;
+    width:100px;
   }
 
   .hifi-pic{
@@ -1556,7 +1575,7 @@
     top: 20810.00px; */
     margin-bottom: 50px;
     grid-column: 1/span 4;
-    grid-row-start: 20;
+    grid-row-start: 23;
   }
 
   @media screen and (min-width: 991px){
@@ -1574,7 +1593,7 @@
     top: 21660px; */
     margin-bottom: 100px;
     grid-column: 1/span 4;
-    grid-row-start: 21;
+    grid-row-start: 24;
   }
 
   @media screen and (min-width: 991px){
@@ -1622,7 +1641,7 @@
     display: block;
     padding: 20px;
     grid-column: 1/span 4;
-    grid-row-start: 22;
+    grid-row-start: 25;
   }
 
 
